--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 <div id="menu">
     <div id="inicio">
-        <a href="#" onclick="goToHome()">Início</a>
+        <a href="gilchoplin.github.io" onclick="goToHome()">Início</a>
     </div>
     <div id="login-form">
         <label for="username">Usuário:</label>
